# ui

./: CMakeLists.txt  README  README.md  lv_conf.defaults  ui.eez-project  ui.eez-project-ui-state
configs/: drm.defaults
src/: custom_tileview.cpp  looper.cpp  looper.hpp  main.cpp  mod.cpp  mod.hpp  player.cpp  player.hpp  sequencer.cpp  sequencer.hpp  tuner.cpp  tuner.hpp
src/protocol/: protocol.cpp  protocol.hpp
src/transport/: zmq_transport.cpp  zmq_transport.hpp
src/ui/: .eez-project-build  actions.c  actions.h  images.c  images.h  screens.c  screens.h  ui_image_ind.c  ui_image_knob.c  ui_image_knob_line.c
